--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
   "homepage": "https://github.com/Snektective/snek-backend#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cookie-session": "^2.0.0-beta.3",
+    "ejs": "^2.5.8",
+    "ent": "^2.2.0",
     "express": "^4.16.3",
-    "express-session": "^1.15.6",
+    "leveldown": "^3.0.0",
+    "levelup": "^2.0.2",
     "node-uuid": "^1.4.8",
     "request": "^2.85.0",
     "request-promise": "^4.2.2",
