--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ejs": "^2.5.8",
     "ent": "^2.2.0",
     "express": "^4.16.3",
+    "express-rate-limit": "^2.11.0",
     "express-session": "^1.15.6",
     "level": "^3.0.0",
     "level-session-store": "^2.1.0",
