--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "snek-backend",
   "version": "1.0.0",
-  "description": "Backend server software for the extension, written in Python.",
+  "description": "Backend server software for the extension, written in Node.js.",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
